# life-verse

./: .gitignore  README.md  chromium-renderer.cpp  chromium-renderer.h  darkpopupwidget.cpp  darkpopupwidget.h  deck.cpp  deck.h  filmstrip.cpp  filmstrip.h  graphicsview-renderer.cpp  graphicsview-renderer.h  helloworld.html  imagelistmodel.cpp  imagelistmodel.h  lyricswidget.cpp  lyricswidget.h  main.cpp  mainwindow.cpp  mainwindow.h  meson.build  playlist-view.cpp  playlist-view.h  playlist-widget.cpp  playlist-widget.h  renderer.cpp  renderer.h  song.cpp  song.h  songslist.cpp  songslist.h  verses.html
content/songs/: 10000-reasons  fish-bowl  greater
